--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorKviz3</title>
+	<base href="https://nagyandor76.github.io/BlazorKviz3/wwwroot/" />
     <base href="/BlazorKviz3/wwwroot" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
