--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vandingo</title>
+    <title>BlazorKviz3</title>
+	<base href="https://nagyandor76.github.io/BlazorKviz3/wwwroot/" />
     <base href="/BlazorKviz3/wwwroot" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
@@ -14,6 +15,7 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+
 </head>
 
 <body>
